# serverd

./: .gitignore  Cargo.toml  Dockerfile.base  Dockerfile.ci  Dockerfile.vscode  README.md  makefile  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
internal-prelude/: Cargo.toml
internal-prelude/src/: lib.rs
monitoring-service/: Cargo.toml  README.md
monitoring-service/polling-monitor/: Cargo.toml
monitoring-service/polling-monitor/src/: lib.rs
monitoring-service/src/: lib.rs
network-service/network-interface-reader/: Cargo.toml
network-service/network-interface-reader/src/net_interfaces/: getifaddrs.rs  ifconfig.rs  ip.rs  mod.rs
network-service/network-interface-reader/src/public_ip/: mod.rs
networking-service/: Cargo.toml  README.md
networking-service/src/: lib.rs
networking-service/src/network_interfaces/: getifaddrs.rs  ifconfig.rs  ip.rs  mod.rs
networking-service/src/public_ip/: dig.rs
nety/: README.md
nety/cli/: Cargo.toml
nety/cli/src/: main.rs
nety/nety/: Cargo.toml
nety/nety/src/: lib.rs
nety/nety/src/net_interfaces/: getifaddrs.rs  ifconfig.rs  ip.rs  mod.rs
nety/nety/src/public_ip/: dig.rs  mod.rs
notification-service/: Cargo.toml  README.md
notification-service/email-notifier/: Cargo.toml
notification-service/email-notifier/src/email/: mod.rs  smtpgmail.rs
noty/: README.md
noty/cli/: Cargo.toml
noty/noty/: Cargo.toml
noty/noty/src/email/: mod.rs  smtpgmail.rs
nursery-prelude/: Cargo.toml
nursery-prelude/src/: lib.rs
serverd/: Cargo.toml
serverd/src/: config_reader.rs  main.rs
watchy/: README.md
watchy/cli/: Cargo.toml
watchy/cli/src/: main.rs
watchy/watchy/: Cargo.toml
watchy/watchy/src/: lib.rs
