[package]
name = "internal-prelude"
version = "0.1.0"
authors = ["nmio <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "0.3.2", features = ["full"] }
futures = "0.3"
itertools = "0.9"
lazy_static = "1.4"
parking_lot = "0.11"
log = "0.4"
env_logger = "0.8.1"
regex = { version = "1.4", features = ["pattern"] }
clap = "3.0.0-beta.2"
