[package]
name = "monitoring-service"
version = "0.1.0"
authors = ["nmio <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internal-prelude = {path = "../internal-prelude"}
crossbeam = "0.8.0"