[package]
name = "nety_cli"
version = "0.1.0"
authors = ["kristokoert <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nursery-prelude = {path = "../../nursery-prelude"}
nety = {path = "../nety"}

[[bin]]
path = "src/main.rs"
name = "nety"