[package]
name = "watchy_cli"
version = "0.1.0"
authors = ["kristokoert <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watchy = {path = "../watchy"}
nursery-prelude = {path = "../../nursery-prelude"}

[[bin]]
path = "src/main.rs"
name = "watchy"